syntax = "proto3";

package gw;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option go_package = "go_chain/gateway/gw";

service HTTPService {
    rpc SendTransaction(SendTransactionRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/transactions"
            body: "*"
        };
    }
    rpc GetTransactionByHash(GetTransactionByHashRequest) returns (GetTransactionResponse) {
        option (google.api.http) = {
            get: "/transactions/{tx_hash}"
        };
    }
    rpc SendBlock(SendBlockRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/blocks"
            body: "*"
        };
    }
    rpc GetBlockByHeight(GetBlockByHeightRequest) returns (GetBlockResponse) {
        option (google.api.http) = {
            post: "/blocks/{block_height}"
        };
    }
    rpc GetBlockByHash(GetBlockByHashRequest) returns (GetBlockResponse) {
        option (google.api.http) = {
            post: "/blocks/{block_hash}"
        };
    }
    rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {
        option (google.api.http) = {
            post: "/blocks/{addr}"
        };
    }
}

// -----------------------------------
//  common messages
// -----------------------------------

message Transaction {
    string tx_hash = 1; 
    uint32 total_value = 2;
    float fee = 3;
    string sender_addr = 4;
    int64 timestamp = 5;
    string signature = 6;
    repeated Output outs = 7;
}

message Output {
    string recipientAddr = 1;
    float value = 2;
}

message Block {
    uint32 height = 1;
    string hash = 2; 
    string prev_block_hash = 3;    
    uint32 extra_nonce = 4;
    string merkle_root = 5;   
    uint64 timestamp = 6;    
    uint32 bits = 7;
    uint32 nonce = 8;
    repeated Transaction transactions = 9;
}

message Account {
    string addr = 1;
    float balance = 2;
}

message Peer {
    string host = 1;
}

// -----------------------------------
//  Request & Response messages 
// -----------------------------------

message GetTransactionByHashRequest {
  string tx_hash = 1;
}

message SendTransactionRequest {
  Transaction transaction = 1;
  // options. not implemented yet
}

message GetTransactionResponse {
    int32 block_height = 1;
    string block_hash = 2;
    Transaction transaction = 3;
}

message SendBlockRequest {
  Block block = 1;
}

message GetBlockResponse {
  Block block = 1;
}

message GetBlockByHashRequest {
  string block_hash = 1;
}

message GetBlockByHeightRequest {
  string block_height = 1;
}

message GetAccountRequest {
  string addr = 1;
}

message GetAccountResponse {
  Account account = 1; 
}
